# libpipeworks

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  engine.c  update-submodules
.github/workflows/: linux.yml  macosx.yml  main.yml  windows.yml
include/pipeworks/: engine.h  game.h  thing.h
pipeworks/: CMakeLists.txt
pipeworks/include/pipeworks/: config.h  engine.h  game.h  pw-std.h  render_interface.h  thing.h
pipeworks/include/pipeworks/things/: sprite.h
pipeworks/src/: 3rdparty_impl.c  engine.c  engine.h  game.c  game.h  ll.c  ll.h  pw_util.c  pw_util.h  render_interface.c  sort.c  sort.h  stdatomic.h  thing.c  thing.h
pipeworks/src/things/: sprite.c  sprite.h
src/: engine.c  engine.h
test_game/: CMakeLists.txt
test_game/src/: main.c
